--- a/ftcss.css
+++ b/ftcss.css
@@ -1,4 +1,5 @@
 *{outline: none}
+
 .ftalbum *{transition: 0.5s;}
 .ftalbum{
 	width: 100%;
@@ -7,7 +8,8 @@
 	top: 0;
 	left: 0;
 	background-color: rgba(0,0,0,0.8);
-	z-index: 10;
+	/*background-color: black;*/
+
 }
 
 .ftalbum img{
@@ -22,32 +24,40 @@
 }
 
 .ftalbum button{
-	width: 100%;
-	height: 100%;
+	width: 50;
+	height: 50;
 	background-color: rgba(0,0,0,0.5);
 	outline: none;
 	color: white;
-	border: none
+	border: none;
+	z-index: 30;
 }
 
 .ftinvisible{display: none}
 
-.btleft,.btright{
-	width: 15%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-}
 
-.btleft *,.btright *{opacity: 0}
+
+/*.btleft *,.btright *{opacity: 0}*/
+
 .btleft:hover *,.btright:hover *{opacity: 1}
+
 .btright{left: none;right: 0;}
-#ftbtclose{
+
+#ftbtclose,.btleft,.btright{
 	width: 50;
 	height: 50;
+
 	position: absolute;
-	top: 10;
-	right: 10;
+	
+	
+
 	z-index: 20;
 	color: white;
+
+	margin: auto;
 }
+
+#ftbtclose{ top: 10; right: 10; }
+.btleft{ top: 0; bottom: 0; left: 10;  }
+.btright{ top: 0; bottom: 0; right: 10;  }
+
